--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "webpack-serve": "^0.3.1"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2"
   }
 }
