--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
         "no-else-return": 0,
         "new-cap": ["error", {"capIsNewExceptions": ["Router"]}],
         "no-console": 0,
+        "no-plusplus": 0,
         "import/no-unresolved": [2, { "caseSensitive": false } ],
         "no-unused-vars": ["error", { "vars": "all", "args": "none" }],
         "no-underscore-dangle": 0,
