--- a/.eslintrc
+++ b/.eslintrc
@@ -17,8 +17,9 @@
         "jsx-a11y/no-noninteractive-element-interactions": 0,
         "strict": 0,
         "quotes": [2, "single"],
+        "consistent-return": 0,
         "no-else-return": 0,
-        "new-cap": ["error", {"capIsNewExceptions": ["Router"]}],
+        "new-cap": 0,
         "no-console": 0,
         "no-plusplus": 0,
         "import/no-unresolved": [2, { "caseSensitive": false } ],
